--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
     },
     "C_Cpp.default.includePath": [
         "${workspaceFolder}/src",
+        "${workspaceFolder}/lib",
         "${VULKAN_SDK}/include",
         "/opt/homebrew/Cellar/glfw/3.4/include",
         "/opt/homebrew/Cellar/glm/1.0.1/include"
