--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -14,6 +14,8 @@ add_executable(${PROJECT_NAME} src/main.cpp)
 find_package(Vulkan REQUIRED)
 find_package(glfw3 3.3 REQUIRED)
 
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_HOME_DIRECTORY}/lib)
+
 # GLSLC command to compile shaders to SPIR-V
 # find_program(GLSLC glslc)
 # set(shader_path ${CMAKE_HOME_DIRECTORY}/shaders/)
