--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -9,7 +9,8 @@ endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++20  " )
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+file(GLOB SRC_FILES "src/*.cpp")
+add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 find_package(Vulkan REQUIRED)
 find_package(glfw3 3.3 REQUIRED)
